@@ -914,7 +914,7 @@
 2295,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		SC_LAZINESS,Masquerade - Laziness
 2296,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		SC_UNLUCKY,Masquerade - Unlucky
 2297,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		SC_WEAKNESS,Masquerade - Weakness
-2298,0,0,0,0,0,0,5,0,no,0,0,0,none,0,	SC_STRIPACCESSARY,Strip Accessory
+2298,1,6,1,0,0x1,0,5,1,no,0,0,0,weapon,0,	SC_STRIPACCESSARY,Strip Accessory
 2299,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		SC_MANHOLE,Man Hole
 2300,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		SC_DIMENSIONDOOR,Dimension Door
 2301,0,0,0,0,0,0,3,0,no,0,0,0,none,0,		SC_CHAOSPANIC,Chaos Panic
