@@ -444,11 +444,10 @@ int map_moveblock(struct block_list *bl, int x1, int y1, unsigned int tick)
 		if( ((TBL_PC*)bl)->shadowform_id > 0 )
 		{
 			struct block_list *s_bl = map_id2bl(((TBL_PC*)bl)->shadowform_id);
-			if( !check_distance_bl(bl,s_bl,skill_get_range(SC_SHADOWFORM,1)) ) // Asume lvl 1.
+			if( s_bl && !check_distance_bl(bl,s_bl,skill_get_range(SC_SHADOWFORM,1)) ) // Asume lvl 1.
 			{
 				((TBL_PC*)bl)->shadowform_id = 0;
-				if( s_bl )
-					status_change_end(s_bl,SC__SHADOWFORM,-1);
+				status_change_end(s_bl,SC__SHADOWFORM,-1);
 			}
 		}
 		skill_unit_move(bl,tick,3);
@@ -1727,6 +1726,8 @@ int map_quit(struct map_session_data *sd)
 				status_change_end(&sd->bl,SC_STRIPSHIELD,-1);
 			if(sd->sc.data[SC_STRIPHELM])
 				status_change_end(&sd->bl,SC_STRIPHELM,-1);
+			if(sd->sc.data[SC__STRIPACCESSORY])
+				status_change_end(&sd->bl,SC__STRIPACCESSORY,-1);
 			if(sd->sc.data[SC_EXTREMITYFIST])
 				status_change_end(&sd->bl,SC_EXTREMITYFIST,-1);
 			if(sd->sc.data[SC_EXPLOSIONSPIRITS])
