@@ -368,6 +368,7 @@ typedef enum sc_type {
 	SC__REPRODUCE,
 	SC__AUTOSHADOWSPELL,
 	SC__SHADOWFORM,
+	SC__STRIPACCESSORY,
 	SC__BODYPAINT,
 	SC__INVISIBILITY,
 	SC__MANHOLE,
