@@ -6,6 +6,11 @@
 //========================================
 
 12/29/2009
+	r85 [pakpil]
+	* Added SC_STRIPACCESSARY.
+	* Minor fix in SC_SHADOWFORM.
+	* Minor fix in my last commmit.
+
 	r84 [pakpil]
 	* Fixed the skillup control from my last commit. Sorry.
 	* Added the new clif_skillcasting packet with the info recompilled from RE server.
